# herp

./: .gitignore  README.md  hazorasp_sales.spec  pyproject.toml
alembic/: env.py
alembic/versions/: 13516194a2b1_initial_schema.py
installer/: build_dmg.sh  hazorasp_sales.iss
src/: main.py
src/app/backup/: __init__.py  backup_service.py
src/app/config/: preferences.py  settings.py  theme.py
src/app/core/: enums.py  exceptions.py
src/app/database/: base.py  engine.py  migrations.py  session.py
src/app/export/: __init__.py  column_spec.py  csv_exporter.py  excel_exporter.py  excel_importer.py  pdf_exporter.py
src/app/models/: __init__.py  contract.py  contract_specification.py  contragent.py  exchange_rate.py  payment.py  payment_allocation.py  product.py  shipment.py  shipment_item.py  sync_log.py  user.py
src/app/reports/: __init__.py  aging_report.py  base_report.py  contract_report.py  (+3 more)
tests/: conftest.py
tests/core/: test_exceptions.py
tests/database/: test_base.py  test_migrations.py  test_session.py
tests/export/: test_exporters.py
tests/models/: test_constraints.py
tests/reports/: test_report_builders.py
tests/repositories/: test_smoke.py
tests/services/: test_aging_service.py  test_analytics_service.py  test_contract_flow.py  test_contract_service.py  test_contract_status.py  test_contragent_and_product_service.py  test_contragent_bulk_import.py  test_currency_service.py  test_kg_summary.py  test_payment_service.py  test_shipment_service.py
tests/sync/: test_exporter.py  test_importer.py  test_serializer.py  test_sync_service.py
(+73 files in other folders)
