[project]
name = "hazorasp-sales"
version = "0.2.0"
description = "Hazorasp Sales Management - ERP darajasidagi sotuvlarni boshqarish tizimi"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.7",
    "sqlalchemy>=2.0",
    "duckdb>=1.1",
    "duckdb-engine>=0.13",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "qtawesome>=1.3",
    "loguru>=0.7",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pytz>=2026.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-qt>=4.4",
    "ruff>=0.7",
    "pyinstaller>=6.10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
